tests/ui/transmutability/visibility/should_accept_if_src_has_unreachable_field.stderr
error[E0446]: private type `src::Zst` in public interface
  --> $DIR/should_accept_if_src_has_unreachable_field.rs:22:9
   |
LL |     #[repr(C)] pub(self) struct Zst; // <- unreachable type
   |                -------------------- `src::Zst` declared as private
...
LL |         pub(in super) field: Zst,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0446`.
